--- a/src/css/trm.css
+++ b/src/css/trm.css
@@ -9,8 +9,13 @@ body {
 
 }
 
-input,select,label {
+input,label {
     text-align: right;
+    margin:5px;
+}
+
+select {
+    text-align: left;
     margin:5px;
 }
 
@@ -24,7 +29,7 @@ form {
 
 label {
     display: inline-block;
-    width: 15%;
+    width: 25%;
     color: darkslateblue;
 }
 
